--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <script type="text/javascript" src="rps.js"></script>
+    <div>Score</div>
+    <div>
+        <div>Player:</div>
+        <div>Computer:</div>
+    </div>
+    <div>
+        <div>Player Choice</div>
+        <div>Computer Choice</div>
+    </div>
+    <div>
+        <div>Rock</div>
+        <div>Paper</div>
+        <div>Scissors</div>
+    </div>
+
+
+
+
+
+
+
+
+    <!-- <script type="text/javascript" src="rpsUI.js"></script> -->
 </body>
 </html>
