--- a/index.html
+++ b/index.html
@@ -6,28 +6,23 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <div>Score</div>
+    <div id='main'>Score</div>
     <div>
-        <div>Player:</div>
-        <div>Computer:</div>
+        <div>Player:<div id="pc">0</div></div>
+        <div>Computer:<div id="cc">0</div></div>
     </div>
     <div>
-        <div>Player Choice</div>
-        <div>Computer Choice</div>
+        <div>Player Choice:</div>
+        <div>Computer Choice:</div>
     </div>
     <div>
-        <div>Rock</div>
-        <div>Paper</div>
-        <div>Scissors</div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
     </div>
 
 
 
-
-
-
-
-
-    <!-- <script type="text/javascript" src="rpsUI.js"></script> -->
+    <script type="text/javascript" src="rpsUI.js"></script>
 </body>
 </html>
