Simple UI done, logic done, only thing left to do is add a more complex UI.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <div id='main'>Score</div>
+    <div id='main'>Chose to Begin!</div>
+    <br>
     <div>
-        <div>Player:<div id="pc">0</div></div>
-        <div>Computer:<div id="cc">0</div></div>
+        <div id="ps">Player:</div>
+        <div id="cs">Computer:</div>
     </div>
+    <br>
     <div>
-        <div>Player Choice:</div>
-        <div>Computer Choice:</div>
+        <div id="pc">Player Choice:</div>
+        <div id="cc">Computer Choice:</div>
     </div>
+    <br>
     <div>
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
